--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -120,7 +120,7 @@
             <md-input-container md-is-error="vm.newLogContent.length === 0" flex md-no-float class="md-primary" title="Content">
                 <input id="inlineContentInput" md-autofocus flex placeholder="Content" ng-model="vm.newLogContent" ng-click="vm.setNewLogStartTimeAfterFocus()">
             </md-input-container>
-            <div flex style="max-width: 450px; max-height: 48px; overflow: auto; margin-right: 4px" ng-class="{'chips-tag-input-error': vm.containsInvalidInlineTagSelection}">
+            <div flex style="max-width: 450px; max-height: 48px; min-height: 48px; overflow: auto; margin-right: 4px" ng-class="{'chips-tag-input-error': vm.containsInvalidInlineTagSelection}">
                 <md-tooltip md-visible="vm.showMandatoryTooltip" md-autohide="false">
                     Select at least one of the mandatory tags: {{vm.mandatoryTagsListString}}
                 </md-tooltip>
