--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -130,7 +130,7 @@
             <md-toolbar ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" style="margin-top: 8px" class="md-whiteframe-z1 md-toolbar-tools-medium"
                 layout="row" layout-align="center center" title="{{vm.subarray.description}}">
                 <div ng-include="'app/scheduler/templates/sb-scheduled-list-header.html'"></div>
-                <span md-ink-ripple flex title="Click to view scheduling details" style="margin-top: -5px;" ng-click="parent.vm.stateGo('scheduler.observations.detail')">Observations</span>
+                <span md-ink-ripple flex title="Click to view scheduling details" style="margin-top: -5px; margin-left: 8px" ng-click="parent.vm.stateGo('scheduler.observations.detail')">Observations</span>
             </md-toolbar>
             <div layout="column" style="min-height: 200px" ng-include="'app/scheduler/templates/sb-scheduled-list.html'"></div>
         </div>
