replaced deprecated () with .open(); add convenience viewing functions for PB obs spec and obs constraints; relist observation schedule on a monitor webserver reconnect

--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -20,7 +20,7 @@
                 <md-checkbox class="md-primary" ng-model="vm.showClearedAlarms" style="font-size: 13px; margin: 0">Show Cleared Alarms
                 </md-checkbox>
                 <md-menu style="padding: 0">
-                    <md-button class="md-icon-button inline-action-button" style="margin: 0 4px" ng-click="$mdOpenMenu()">
+                    <md-button class="md-icon-button inline-action-button" style="margin: 0 4px" ng-click="$mdMenu.open($event)">
                         <md-icon class="fa" md-font-icon="fa-ellipsis-v"></md-icon>
                     </md-button>
                     <md-menu-content width="4" style="padding-left: 16px; padding-right: 16px;">
