--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -68,7 +68,7 @@
                         md-ink-ripple title="Delete Draft Schedule Block" ng-click="vm.removeDraft(item); $event.stopPropagation()"
                         ng-if="!item.editing"></span>
                     <md-menu>
-                        <span class="icon-button fa fa-ellipsis-v" md-ink-ripple style="padding: 6px" ng-click="$mdOpenMenu(); $event.stopPropagation()"></span>
+                        <span class="icon-button fa fa-ellipsis-v" md-ink-ripple style="padding: 6px" ng-click="$mdMenu.open($event); $event.stopPropagation()"></span>
                         <md-menu-content>
                             <md-menu-item>
                                 <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="item.editing = true">Edit</md-button>
