--- a/app/scheduler/observations/observations-overview.html
+++ b/app/scheduler/observations/observations-overview.html
@@ -4,12 +4,24 @@
         <div layout="column" flex>
 
             <md-toolbar ng-class="{'md-hue-2': subarray.state !== 'inactive'}" class="md-whiteframe-z1" layout="row"
-                layout-align="start center" title="{{subarray.description}}" style="max-height: 48px; min-height: 48px; position: relative"
+                layout-align="start center" title="{{subarray.description}}" style="max-height: 48px; min-height: 48px; position: relative; padding-right: 8px"
                 ng-click="parent.vm.stateGo('scheduler.observations.detail', subarray.id)">
                 <span style="margin-left: 8px;">SUBARRAY {{subarray.id}} -
                             <span><b>{{subarray.state}}</b></span>
                 <span ng-if="subarray.maintenance">{{"- in maintenance"}}</span>
                 </span>
+                <span flex></span>
+                <md-menu style="margin: 0; padding: 0; position: relative">
+                    <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)" class="opaque-hover">
+                        <span class="fa fa-chevron-down subarray-select-chevron" style="top: 7px"></span>
+                        <span style="margin-left: 16px">MODE: <b>{{subarray.mode}}</b></span> </span>
+                    </span>
+                    <md-menu-content>
+                        <md-menu-item ng-repeat="type in parent.vm.modeTypes">
+                            <md-button ng-disabled="!parent.vm.iAmAtLeastCA()" ng-click="parent.vm.setSchedulerMode(subarray.id, type)">Set Mode to: {{type}}</md-button>
+                        </md-menu-item>
+                    </md-menu-content>
+                </md-menu>
                 <div ng-include="'app/scheduler/templates/subarray-config-container.html'"></div>
             </md-toolbar>
             <div layout="column" style="overflow: auto" ng-include="'app/scheduler/templates/pb-scheduled-list.html'"></div>
