--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -137,8 +137,10 @@
             </md-button>
         </div>
         <div layout="column" style="padding-right: 4px" class="md-whiteframe-z1">
-            <md-toolbar ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" style="margin-top: 8px" class="md-whiteframe-z2 md-toolbar-tools-medium">
-                <span md-ink-ripple flex title="Click to view scheduling details" ng-click="parent.vm.stateGo('scheduler.observations.detail')">Observations</span>
+            <md-toolbar ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" style="margin-top: 8px; min-height: 60px" class="md-whiteframe-z2 md-toolbar-tools-medium">
+                <span md-ink-ripple flex title="Click to view scheduling details" ng-click="parent.vm.stateGo('scheduler.observations.detail')" style="margin-top: -20px">Observations</span>
+                <div ng-include="'app/scheduler/templates/sb-scheduled-list-header.html'" class="list-subheader-title"
+                    style="height: 32px; width: 100%"></div>
             </md-toolbar>
             <div layout="column" style="min-height: 350px; max-height: 350px; overflow: auto" ng-include="'app/scheduler/templates/pb-scheduled-list.html'"></div>
         </div>
