fix the values used for resource utilisation in the report; fixes for min heights for sensor list and sensor graph display; fix drawing discreet sensors with '' values

--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -1,7 +1,7 @@
 <div layout="row" ng-controller="SensorGraphCtrl as vm" md-theme="{{themePrimary}}" flex ng-click="vm.showDatePicker = false;vm.showEndDatePicker = false;"
     style="cursor: auto; min-height: 640px">
 
-    <div layout="column" style="margin: 8px; min-width: 366px; max-width: 366px; min-height: 100%;">
+    <div layout="column" style="margin: 8px; min-width: 366px; max-width: 366px; min-height: 600px">
         <md-toolbar layout="row" class="md-whiteframe-z1 md-toolbar-tools-medium">
             <span flex>Tools</span>
         </md-toolbar>
