--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -4,8 +4,8 @@
         <div layout="row" flex>
             <div layout="column" flex>
                 <md-toolbar md-theme="{{vm.subarray.state === 'inactive'? 'grey' : vm.subarray.state === 'active'? 'green' : vm.subarray.state === 'error'? 'amber' : 'deep-purple'}}"
-                    ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" class="md-whiteframe-z1" layout="row"
-                    layout-align="center center" title="{{vm.subarray.description}}" style="max-height: 56px; min-height: 56px; position: relative;">
+                    ng-class="{'md-hue-2': vm.subarray.state !== 'inactive'}" class="md-whiteframe-z2" layout="row"
+                    layout-align="center center" title="{{vm.subarray.description}}" style="max-height: 80px; min-height: 80px; position: relative;">
                     <div ng-include="'app/scheduler/templates/subarray-config-container.html'"></div>
                     <div flex class="unselectable list-subheader-title subheader-text" layout="row" layout-align="start end">
                         <span style="width: 120px" ng-click="vm.setDraftsOrderBy('id_code')">
@@ -39,8 +39,8 @@
                     </div>
                     <md-menu>
                         <md-button class="subarray-config-menu-button" title="Change Subarray" ng-click="$mdMenu.open($event); $event.stopPropagation()"
-                            style="font-size: inherit; margin: -8px 0 8px 0">
-                            <span class="fa fa-chevron-down subarray-select-chevron" style="top: 6px"></span>
+                            style="font-size: 30px; margin: 0 4px">
+                            <span class="fa fa-chevron-down subarray-select-chevron" style="top: 12px"></span>
                             <span style="margin-left: 14px;">
                                 SUBARRAY {{vm.subarray.id}} -
                                 <span><b>{{vm.subarray.state}}</b></span>
@@ -54,7 +54,7 @@
                         </md-menu-content>
                     </md-menu>
                     <span flex></span>
-                    <md-menu style="margin: -12px 8px 0 0; padding: 0; position: relative">
+                    <md-menu style="margin: 0 8px 0 0; padding: 0; position: relative">
                         <span md-ink-ripple style="margin: 0; padding: 0px" ng-click="$mdMenu.open($event)" class="opaque-hover">
                             <span class="fa fa-chevron-down subarray-select-chevron" style="top: 7px"></span>
                             <span style="margin-left: 16px">MODE: <b>{{vm.subarray.mode}}</b></span> </span>
