--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -166,6 +166,12 @@
                 </md-button>
                 <md-menu-content width="4" style="padding-left: 16px;" id="sensor-graph-menu-content" md-menu-disable-close>
                     <md-menu-item>
+                        <md-checkbox class="md-primary" ng-model="vm.plotUsingValueTimestamp" ng-change="vm.plotUsingValueTimestampChanged()"
+                            title="Clear and redraw the chart using value timestamps instead of sample timestamps">
+                            Plot Using Value Timestamps
+                        </md-checkbox>
+                    </md-menu-item>
+                    <md-menu-item>
                         <md-checkbox class="md-primary" ng-model="vm.showGridLines" ng-change="vm.showOptionsChanged()">
                             Show Grid Lines
                         </md-checkbox>
