--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -20,7 +20,7 @@
             <div layout="row" style="margin-top: 4px; min-height: 32px; max-height: 32px">
                 <md-input-container md-no-float style="margin: 0; padding: 0; width: 135px; height: 30px">
                     <input type="text" ng-change="vm.startTimeChange()" ng-model="vm.sensorStartDateReadable" placeholder="Start Date (UTC)"
-                        ng-class="{'input-error':vm.dateTimeError}" title="Start Date 'HH:mm:ss yyyy-MM-dd' UTC"
+                        ng-class="{'input-error':vm.dateTimeError}" title="Start Date 'yyyy-MM-dd HH:mm:ss' UTC"
                         ng-click="$event.stopPropagation()" />
                 </md-input-container>
                 <md-button class="md-icon-button" style="margin: 0; padding: 0; width: 32px; max-height: 32px; min-height: 32px; max-height: 32px"
@@ -32,7 +32,7 @@
             <div layout="row" layout="center center" style="margin: 0px; padding: 4px; min-height: 32px; max-height: 32px">
                 <md-input-container md-no-float style="margin: 0; padding: 0; width: 135px; height: 30px">
                     <input type="text" ng-change="vm.endTimeChange()" ng-model="vm.sensorEndDateReadable" placeholder="End Date (UTC)"
-                        ng-class="{'input-error':vm.endDateTimeError}" title="End Date 'HH:mm:ss yyyy-MM-dd' (UTC)"
+                        ng-class="{'input-error':vm.endDateTimeError}" title="End Date 'yyyy-MM-dd HH:mm:ss' (UTC)"
                         ng-click="$event.stopPropagation()" />
                 </md-input-container>
                 <md-button class="md-icon-button" style="margin: 0; padding: 0; width: 32px; max-height: 32px; min-height: 32px;"
