updated angular to 1.6, updated angular-bootstrap-datetimepicker to 1.1.4; use npm package for the sockjs client and upgraded to 1.1.4; removed the hash in the gui url (HTML5 mode)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32">
     <link href="app/app.less" type="text/css" rel="stylesheet/less">
-    <!-- <base href="/"> -->
+    <base href="/">
 </head>
 
 <body ng-controller="ApplicationCtrl as vm" md-theme="{{themePrimary}}" md-theme-watch="true" layout="row" ng-cloak>
@@ -33,6 +33,7 @@
 <script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="node_modules/ngstorage/ngStorage.js"></script>
 <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
+<script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 <script src="node_modules/d3/d3.js"></script>
 <script src="node_modules/jspdf/dist/jspdf.min.js"></script>
 <script src="node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
