--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -68,7 +68,7 @@
                 </md-select>
             </div>
             <div layout="row" style="min-height: 40px">
-                <md-autocomplete style="min-width: 310px;" md-no-cache="true" ng-disabled="vm.waitingForSearchResult"
+                <md-autocomplete md-theme="{{themePrimary}}" style="background: inherit; min-width: 310px;" md-no-cache="true" ng-disabled="vm.waitingForSearchResult"
                     md-search-text="vm.searchText" md-items="item in vm.querySearch(vm.searchText)" md-selected-item="vm.selectedSearchItem"
                     placeholder="Type a sensor regular expression. E.g. wind" md-autofocus ng-keydown="vm.autoCompleteKeyPressed($event)"
                     enter-pressed="vm.findSensorNames(vm.searchText)" flex>
