add another state for userlog-reports, named userlog-report. This new state uses query parameters to configure the input. The old userlog-reports is kept for backwards compatibility

--- a/app/widgets/navigation/navigation-widget-blocks.html
+++ b/app/widgets/navigation/navigation-widget-blocks.html
@@ -69,7 +69,7 @@
         <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium"><span flex>User Logs</span></md-toolbar>
         <div flex class="md-whiteframe-z1 nav-widget-button-container" md-theme="{{$root.themePrimaryButtons}}" layout="column">
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('userlogs')" layout="row"><span class="fa fa-pencil-square-o"></span><span flex>User Logs</span></md-button>
-            <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('userlog-reports')" layout="row"><span class="fa fa-file-pdf-o"></span><span flex>User Log Reports</span></md-button>
+            <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('userlog-report')" layout="row"><span class="fa fa-file-pdf-o"></span><span flex>User Log Reports</span></md-button>
             <md-button flex class="md-raised md-primary" ng-click="$root.stateGo('userlog-tags')" ng-show="$root.expertOrLO" layout="row"><span class="fa fa-tag"></span><span flex>User Log Tags</span></md-button>
         </div>
     </div>
